<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LogIn"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    tools:context=".LogInPage">

    <View
...
        app:layout_constraintEnd_toEndOf="@+id/white_frame"
        app:layout_constraintStart_toStartOf="@+id/white_frame"
        app:layout_constraintTop_toBottomOf="@+id/serene_logo" />


    <EditText
        android:id="@+id/Email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
...


    <EditText
        android:id="@+id/Password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
...
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/error"
        android:textColor="@color/Error"
        app:layout_constraintEnd_toEndOf="@+id/white_frame"
        app:layout_constraintStart_toStartOf="@+id/white_frame"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/off_button"
        android:enabled="false"
        android:fontFamily="@font/montserrat"
        android:padding="3dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/white_frame"
...
