...
    <string name="MedSavedSuccess">The Medicine Reminder Saved Successfully</string>
    <string name="MedSavedFialed">The Medicine Reminder Did not Saved, Try Again</string>

    <!-- Delete Med Reminder Page -->
    <string name="MedDetails">Medicine</string>
    <string name="DeleteMed">Delete Medicine</string>
    <string name="DeleteMessageMed">Are you sure you want to delete this Medicine Reminder ? </string>
    <string name="DeleteOKMed">Delete</string>
    <string name="DeleteCancleMed">Cancel</string>
    <string name="MedDeletedSuccess">The Medicine Reminder Deleted Successfully</string>
    <string name="MedDeletedFialed">The Medicine Reminder Did not Deleted, Try Again</string>

    <!-- Add Doctor Page -->
    <string name="AddDoc">Add Doctor</string>
    <string name="AddDocName">Doctor Name</string>
    <string name="AddDocEmail">Doctor Email</string>
    <string name="PatientEmail">You Can not Use Your Email</string>
...
